# papr

./: .gitignore  CHANGELOG.md  README.md  auto.sh  papr  pyproject.toml  requirements.txt  setup.py  test.sh
calgami/: app.py  calgami.py
papr/: __init__.py  dev.py  papr.py
papr/layouts/: big.py  classic.py  column.py  month.py  oneyear.py
papr/style/: classic.py
papr/util/: __init__.py  drawing.py  metrics.py  styles.py
web/: application.py
web/static/javascripts/: portamento.js
web/static/stylesheets/: main.css
web/templates/: index.html  layout.html
