[project]
name = "papr"
version = "0.1.0"
description = "Command line tool to generate empty calendar templates to print"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Peter Poloczek", email = "contact@peetzweg.com"}
]
dependencies = [
    "PyGObject>=3.42.0",
    "pycairo>=1.20.0",
]

[project.scripts]
papr = "papr.papr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papr"]
