[project]
name = "papr"
version = "1.0.0"
description = "Command line tool to generate empty calendar templates to print"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "peetzweg"}
]
urls = {Homepage = "https://peet.sh/"}
dependencies = [
    "PyGObject>=3.42.0",
    "pycairo>=1.20.0",
]

[project.scripts]
papr = "papr.papr:main"

[dependency-groups]
dev = [
    "watchfiles>=0.18.0",
]

[tool.uv]
package = true
